###### TWE 5.2-1 RELEASED ######
2015-09-11 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Implemented support (GUI + validation) to reference XPDL_STRING variable from DynamicScript variable

2015-09-10 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Improved validation:
         * can't have the same Ids for xpdl strings/i18n variables/normal variables
         * can't have invalid characters for xpdl string/i18n variables

2015-09-04 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved validation - can't have Tool activities having both start and finish mode set to MANUAL 

2015-09-03 Sasa Bojanic <sasaboy@together.at>
   # Java 8 support
   # Shark mode: Again allowing Tool activities with System participant performer to have MANUAL finish mode (to support Quartz tool agent and similar tool agents)

2015-08-25 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improvement: increased dimensions of table for displaying DataFields, FormalParameters, XPDLStrings and I18NVariables

2015-08-24 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Fix: repositioning of XPDLString and I18N variables inside table is now working
      
2015-08-21 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Support for VariableToProcess_FETCH extended attribute
      - Improved:
         * panel for actual parameters (now considering if formal parameter is array and offering only the array variables in that case)
         * the background color of combo-box now properly set
         * the background color of list panel for selecting participants when many now properly set
         * checking and updating Variable/XPDLString/I18n variable ids inside BeanShell/JavaScript script expression
         * checking and updating I18n variable ids inside InitialValue expression
         * showing text panel instead of editable combo-box for i18n variables